# jira-to-obsidian

./: .coverage  .env.example  .gitignore  README.md  pyproject.toml  run.sh
src/jira_to_obsidian/: __init__.py  cli.py  config.py  formatter.py  jira_client.py  obsidian_client.py  state.py  sync.py
tests/: __init__.py  test_config.py  test_formatter.py  test_obsidian_client.py
